--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -83,8 +83,8 @@
             </div>
             <div class="mt-4 pl-2 mb-2 dark:text-white flex justify-between ">
                 <div>
-                    <p class="text-lg font-semibold  mb-0">Product Name</p>
-                    <p class="text-md text-gray-300 mt-0">$340</p>
+                    <p class="text-lg font-semibold  mb-0">{{slide.name}}</p>
+                    <p class="text-md text-gray-300 mt-0">{{slide.price}}</p>
                 </div>
                
             </div>
