--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -60,7 +60,7 @@
 
     <ng-container  *ngFor="let slide of products">
         <ng-template carouselSlide class="" >
-        <div class="relative max-w-[320px] min-w-[290px] sm:min-w-[200px] rounded-3xl group p-2 my-3 cursor-pointer">
+        <div class="relative max-w-[320px] min-w-[200px]  rounded-3xl group p-2 my-3 cursor-pointer">
             <div class="overflow-x-hidden rounded-2xl relative">
                 <img class="h-48 rounded-2xl filter  group-hover:brightness-90 w-full object-cover"
                     src="https://pixahive.com/wp-content/uploads/2020/10/Gym-shoes-153180-pixahive.jpg">
