--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<router-outlet>
+<app-navbar ></app-navbar>
+<router-outlet class="dark:bg-slate-800">
 
 </router-outlet>
-<app-footer></app-footer>
-<app-navbar class="md:hidden"></app-navbar>
+<app-footer ></app-footer>
+
